# Snake_Rust

./: .gitignore  Cargo.toml  LICENSE  README
src/: main.rs
