[package]
name = "snake"
version = "0.1.0"
authors = ["lucianwill <37515531+lucianwill@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.34.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.68.0"
rand = "0.7"
